# imgui_demo

./: README.md  b  c  imgui.ini  r
backends/: imgui_impl_allegro5.h  imgui_impl_glfw.h  imgui_impl_opengl3.h
common/: OFFReader.h  common.hpp  cuda_runtime.h
extras/: 1cuda_imgui_main.cu  1main.cpp  2cuda_imgui_main.cu  3cuda_imgui_main.cu  4cuda_imgui_main.cu  works.cu
include/: Camera.hpp  CudaScene.hpp  Point.hpp  Renderer.hpp  Vector.hpp
src/: CMakeLists.txt  Makefile  cuda_imgui_main.cu  imgui.ini  main.cpp
